@@ -29,6 +29,7 @@ close(INFO);				# Close the file
 local $output;
 
 %mysql=(
+	"database"	=>	"mysql",
 	"type"		=>	"sql",
 	"before"	=>	"",
 	"after"		=>	"",
@@ -50,6 +51,7 @@ local $output;
 );
 
 %c=(	"type"		=>	"code",
+	"database"	=>	"",
 	"after"		=>	"\t{0}\n};\n",
 	"t_bigint"	=>	"ZBX_TYPE_UINT",
 	"t_id"		=>	"ZBX_TYPE_ID",
@@ -89,6 +91,7 @@ static	ZBX_TABLE	tables[]={
 ";
 
 %oracle=("t_bigint"	=>	"number(20)",
+	"database"	=>	"oracle",
 	"before"	=>	"",
 	"after"		=>	"",
 	"type"		=>	"sql",
@@ -108,6 +111,7 @@ static	ZBX_TABLE	tables[]={
 );
 
 %postgresql=("t_bigint"	=>	"bigint",
+	"database"	=>	"postgresql",
 	"before"	=>	"",
 	"after"		=>	"",
 	"type"		=>	"sql",
@@ -128,6 +132,7 @@ static	ZBX_TABLE	tables[]={
 );
 
 %sqlite=("t_bigint"	=>	"bigint",
+	"database"	=>	"sqlite",
 	"before"	=>	"",
 	"after"		=>	"",
 	"type"		=>	"sql",
@@ -226,6 +231,12 @@ sub process_field
 		s/$type_short/$a/g;
 		$type_2=$_;
 		if($default ne "")	{ $default="DEFAULT $default"; }
+		# Special processing for Oracle "default 'ZZZ' not null" -> "default 'ZZZ'. NULL=='' in Oracle!"
+		if(($output{"database"} eq "oracle") && (0==index($type_2,"varchar2")))
+		{
+		#	$default="DEFAULT NULL";
+			$null="";
+		}
 		print "\t$name\t\t$type_2\t\t$default\t$null";
 	}
 }
